@@ -1,12 +1,11 @@
 Package: networkD3
 Type: Package
-Title: Tools for creating D3 JavaScript force network and Sankey
-    graphs from R
-Description: This packages is intended to make it easy to create D3 JavaScript
-    network, tree, dendrogram, and Sankey graphs from R using data frames.
+Title: Tools for Creating D3 JavaScript Network Graphs from R
+Description: Creates D3 JavaScript network, tree, dendrogram, and Sankey graphs
+    from R.
 Version: 0.1.1
-Date: 2014-12-15
-Author: Christopher Gandrud and J.J. Allaire
+Date: 2014-12-16
+Author: Christopher Gandrud, J.J. Allaire, and B.W. Lewis
 Maintainer: Christopher Gandrud <christopher.gandrud@gmail.com>
 URL: http://github.com/christophergandrud/networkD3/
 License: GPL (>= 3)
