@@ -42,7 +42,8 @@
 #               fontsize = 12, nodeWidth = 30)
 #' }
 #' @source
-#' D3.js was created by Michael Bostock. See \url{http://d3js.org/} and, more specifically for Sankey diagrams \url{http://bost.ocks.org/mike/sankey/}.
+#' D3.js was created by Michael Bostock. See \url{http://d3js.org/} and, more
+#' specifically for Sankey diagrams \url{http://bost.ocks.org/mike/sankey/}.
 #'
 #' @export
 
